<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bluetooth.demo.DeviceFragment" >

    <item
        android:id="@id/fun_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_clear"/>
    <item
        android:id="@id/fun_app_permission"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_app_permission"/>
    <item
        android:id="@id/fun_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_connect"/>
    <item
        android:id="@id/fun_cancel_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_cancel_connect"/>
    <item
        android:id="@id/fun_device_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_device_info"/>
    <item
        android:id="@id/fun_upgrade"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_upgrade"/>
    <item
        android:id="@id/fun_bind_device"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_binding"/>
    <item
        android:id="@id/fun_read_battery"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_read_battery"/>
    <item
        android:id="@id/fun_alarm_clock"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_alarm_clock"/>
    <item
        android:id="@id/fun_event_reminder"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_event_reminder"/>
    <item
        android:id="@id/fun_night_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_night_mode"/>
    <item
        android:id="@id/fun_screen_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_screen_mode"/>
    <item
        android:id="@id/fun_wear_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_wear_mode"/>
    <item
        android:id="@id/fun_hr_detect_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_hr_detect_mode"/>
    <item
        android:id="@id/fun_dictance_unit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_dictance_unit"/>
    <item
        android:id="@id/fun_time_unit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_time_unit"/>
    <item
        android:id="@id/fun_dialpace_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_dialpace_mode"/>
    <item
        android:id="@id/fun_auto_discern"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_auto_discern"/>
    <item
        android:id="@id/fun_hr_warning"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_hr_warning"/>
    <item
        android:id="@id/fun_sedentry"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_sedentry"/>
    <item
        android:id="@id/fun_weather"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_weather"/>
    <item
        android:id="@id/fun_behavior_reminder"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_behavior_reminder"/>
    <item
        android:id="@id/fun_message_remind"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_message_remind"/>
    <item
        android:id="@id/fun_test_message_remind"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_test_message_remind"/>
    <item
        android:id="@id/fun_target"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_target"/>
    <item
        android:id="@id/fun_custom_pages"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_custom_pages"/>
    <item
        android:id="@id/fun_test_incoming_call"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_test_incoming_call"/>
    <item
        android:id="@id/fun_health_score"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_health_score"/>
    <item
        android:id="@id/fun_photographing"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_photographing"/>
    <item
        android:id="@id/fun_device_positioning"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_positioning"/>
    <item
        android:id="@id/fun_device_restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_restart"/>
    <item
        android:id="@id/fun_device_switch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_device_switch"/>
    <item
        android:id="@id/fun_sport_request"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_sport_request"/>
    <item
        android:id="@id/fun_quiet_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_quiet_mode"/>
   
   <!-- Kchiing Reminder Setting -->
   <!--  <item
        android:id="@id/kchiing_fun_appointment_reminder"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_reminder_appointment"/>
    <item
        android:id="@id/kchiing_fun_message_reminder"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_reminder_message"/>
    <item
        android:id="@id/kchiing_fun_simple_reminder"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_reminder_simple"/>
    <item
        android:id="@id/kchiing_fun_wakeup_reminder"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_reminder_wakeup"/> -->

</menu>