<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bluetooth.demo.DeviceFragment" >

    <item
        android:id="@id/fun_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_clear"/>
    <item
        android:id="@id/fun_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_connect"/>
    <item
        android:id="@id/fun_cancel_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_cancel_connect"/>
    <item
        android:id="@id/fun_device_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_device_info"/>
    <item
        android:id="@id/fun_bpm_get_measurement_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_get_bpm_data"/>
    <item
        android:id="@id/fun_bpm_delete_measurement_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_delete_bpm_data"/>
    
     <item
        android:id="@id/fun_bpm_set_measurement_time_interval"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_set_bmp_time_interval"/>
     
        <item
        android:id="@id/fun_bpm_read_measurement_time_interval"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/str_fun_read_bmp_time_interval"/>

</menu>