<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bluetooth.demo.ShowDeviceActivity" >

    <item
        android:id="@+id/action_device_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_device_info"/>
    <item
        android:id="@+id/action_upgrade"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upgrade_device"/>
    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_text"/>
    
    <item
        android:id="@+id/action_read_battery"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Read Device Battery"/>
    
     <item
        android:id="@+id/action_update_hr_detection_mode"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Set HR Detection Mode"/>
     
     <item
        android:id="@+id/action_update_alarm_clock"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Set Alarm Clock Without Title"/>
     
     <item
        android:id="@+id/action_update_event_reminder"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Set Alarm Clock With Title"/>
     
      <item
        android:id="@+id/action_update_sedentary_reminder"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Set Sedentary Info"/>

</menu>